# izbori_2020

./: README.md  rezultati.db
import/: CMakeLists.txt  main.cpp  po_izbiracki_mesta.sql  vkupno.sql
